add node-chrome and testcase

--- a/hub.yaml
+++ b/hub.yaml
@@ -1,3 +1,29 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: selenium-hub
+  labels:
+    app: selenium-hub
+spec:
+  type: NodePort
+  selector:
+    app: selenium-hub
+  ports:
+  - name: "se-event-bus-publish-port"
+    port: 4442
+    targetPort: 4442
+    nodePort: 30442
+  - name: "se-event-bus-subscribe-port"
+    port: 4443
+    targetPort: 4443
+    nodePort: 30443
+  - name: "se-hub-port"
+    port: 4444
+    targetPort: 4444
+    nodePort: 30444
+  sessionAffinity: None
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,40 +40,15 @@ spec:
       labels:
         app: selenium-hub
     spec:
-      nodeSelector:
-        seleniumRole: hub
       containers:
-      - name: selenium-hub
-        # image: mellinchou1/selenium-hub:1.5-newqueue-health
-        image: selenium/hub:latest
-        ports:
-          - containerPort: 4442
-          - containerPort: 4443
-          - containerPort: 4444
-        env:
-          - name: SE_OPTS
-            value: "--healthcheck-interval 10"
-          #   value: "--registration-secret parrot"
-          - name: SE_SESSION_REQUEST_TIMEOUT
-            value: "180"
-          - name: SE_SESSION_RETRY_INTERVAL
-            value: "0"  
-        # resources:
-        #   limits:
-        #     memory: "2600Mi"
-        #     cpu: "2.0"
-        #   requests:
-        #     cpu: ".01"
-        #     memory: "400Mi"
-        # livenessProbe:
-        #   httpGet:
-        #     path: /status
-        #     port: 4444
-        #   initialDelaySeconds: 30
-        #   timeoutSeconds: 30
-        # readinessProbe:
-        #   httpGet:
-        #     path: /status
-        #     port: 4444
-        #   initialDelaySeconds: 30
-        #   timeoutSeconds: 30
+        - name: selenium-hub
+          image: selenium/hub:latest
+          ports:
+            - containerPort: 4442
+            - containerPort: 4443
+            - containerPort: 4444
+          env:
+            - name: SE_SESSION_REQUEST_TIMEOUT
+              value: "180"
+            - name: SE_SESSION_RETRY_INTERVAL
+              value: "0"
