--- a/hub.yaml
+++ b/hub.yaml
@@ -42,7 +42,7 @@ spec:
     spec:
       containers:
         - name: selenium-hub
-          image: selenium/hub:latest
+          image: seleniarm/hub:latest
           ports:
             - containerPort: 4442
             - containerPort: 4443
